--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,7 +46,7 @@ body {
   --main-sans-serif-font: 'Inter', sans-serif;
   --main-hover-border: 0;
   --main-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.25);
-  --main-active-box-shadow: 0px 0px 14px -2px rgba(0, 0, 0, 0.5);
+
   font-family: var(--main-sans-serif-font);
   color: var(--main-dark-color);
 }
